--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 jwt = "0.16.0"
+gethostname = "0.5.0"
+sysinfo = "0.33.1"
+pnet = "0.35.0"
