--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 jwt = "0.16.0"
-gethostname = "0.5.0"
-sysinfo = "0.33.1"
-pnet = "0.35.0"
+actix-web = "4.9.0"
+tokio = "1.43.0"
+thiserror = "2.0.11"
+rusqlite = "0.33.0"
+base64 = "0.22.1"
