--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "TrackVault"
+name = "track-vault-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,3 +15,9 @@ thiserror = "2.0.11"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 base64 = "0.22.1"
 dotenv = "0.15.0"
+
+
+[workspace]
+members = [
+    "agent",
+]
